--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,38 @@
 <resources>
 
     <style name="Theme.WaterFountainMachine" parent="android:Theme.Material.Light.NoActionBar" />
+    
+    <!-- Admin Panel Styles -->
+    <style name="KeypadButtonStyle">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:layout_margin">12dp</item>
+        <item name="android:background">@drawable/circular_button_background</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:elevation">6dp</item>
+    </style>
+    
+    <style name="NavButtonStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textColor">@color/white_70</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:padding">8dp</item>
+    </style>
+    
+    <style name="AdminButtonStyle">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:background">@drawable/admin_button_background</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:elevation">2dp</item>
+    </style>
+
 </resources>
