--- a/app/src/main/res/drawable/gradient_background_main.xml
+++ b/app/src/main/res/drawable/gradient_background_main.xml
@@ -3,7 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="135"
-        android:startColor="#1e3c72"
-        android:centerColor="#2a5298"
-        android:endColor="#4facfe"/>
+        android:startColor="#bdc3c7"
+        android:endColor="#2c3e50"/>
 </shape>
